2005-08-25  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/gcc.mak: usage of -fuse-cxa-atexit strongly
	required for correct order of static objects dtors calls. This is
	used in deinitialization of locale-related objects. Thanks Matti Rintala.

	* stlport/stl/_config.h: use different namespaces for mulithreaded
	and non-multithreaded builds to avoid usage of non-multithreaded
	application with multithreaded libstlport and vice versa;
	[combination non-mt & mt lead to crash due to different instances
	and sizes of allocators for non-mt and mt cases].

2005-08-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config_compat.h: Add check of _STLP_NO_OWN_IOSTREAMS
	macro to make remove of its support more explicit thanks to a #error
	directive.

	* stlport/stl/_tree.h, _hashtable.h: Now reference and pointer types
	are taken from the _Traits template parameter used to instanciate
	the class. Doing so now set::reference and hash_set::reference are
	const_reference which is coherent with respective iterators that are
	immutable. Moreover it fixes a VC6 bug in reverse_iterator implementation
	that was trying to transform a const reference to a simple reference
	thanks Russell Miller report.

	* test/unit/set_test.cpp: New test case for set reverse_iterator.

2005-08-23  Petr Ovtchenkov  <ptr@island...>

	* stlport/config/stl_gcc.h: seems HP-UX has no *f variants of math
	functions [ceilf, fabsf, etc.]

2005-08-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string.h, _rope.h: Removed __move_traits specialization
	for string wstring crope and wrope. There is no reason to believe that
	its move construtor will be complete as an STLport user has the right
	to specialized the std::allocator<char> or wchar_t.

	* stlport/stl/_function_base.h, _alloc.h: Generalized use of the
	__stlport_class struct rather than introducing a new helper type
	(__stlport_less or __stlport_alloc) when we need to recognize STLport
	implementation from a user one.
